--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <%- body %>
+    <%- include('../partials/header.ejs') %> <%-
+    include('../partials/sidebar.ejs') %> <%- body %>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
