container fluid class added

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -18,8 +18,15 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <%- include('../partials/header.ejs') %> <%-
-    include('../partials/sidebar.ejs') %> <%- body %>
+    <%- include('../partials/header.ejs') %>
+
+    <div class="container-fluid">
+      <div class="row">
+        <%- include('../partials/sidebar.ejs') %>
+
+        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4"><%- body %></main>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
