--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,10 @@
-<h1>Dashboard</h1>
+<div
+  class="d-flex justify-content-between flex-wrap flex-md nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+>
+  <h1 class="h2">Dashboard</h1>
+  <div class="btn-toolbar mb-2 mb-md 0">
+    <div class="btn-group me-2">
+      <a href="/add" class="btn btn-sm btn-outline-secondary">+ New User</a>
+    </div>
+  </div>
+</div>
