first name added

--- a/views/customer/add.ejs
+++ b/views/customer/add.ejs
@@ -24,3 +24,20 @@
     </div>
   </div>
 </div>
+
+<form action="/add" method="POST">
+  <div class="row form-group mb-4">
+    <div class="col">
+      <label for="firstName">First Name</label>
+      <input
+        type="text"
+        class="form-control"
+        id="firstName"
+        name="firstName"
+        value=""
+        placeholder="First Name"
+        required
+      />
+    </div>
+  </div>
+</form>
