--- a/views/customer/add.ejs
+++ b/views/customer/add.ejs
@@ -39,5 +39,10 @@
         required
       />
     </div>
+     <div class="col">
+      <label for="lastName">Last Name</label>
+      <input type="text" class="form-control" id="lastName" name="lastName" value="" placeholder="Last Name" required>
+    </div>
+  </div>
   </div>
 </form>
