--- a/views/customer/add.ejs
+++ b/views/customer/add.ejs
@@ -39,10 +39,62 @@
         required
       />
     </div>
-     <div class="col">
+
+    <div class="col">
       <label for="lastName">Last Name</label>
-      <input type="text" class="form-control" id="lastName" name="lastName" value="" placeholder="Last Name" required>
+      <input
+        type="text"
+        class="form-control"
+        id="lastName"
+        name="lastName"
+        value=""
+        placeholder="Last Name"
+        required
+      />
     </div>
   </div>
+
+  <div class="row form-group mb-4">
+    <div class="col">
+      <label for="tel">Telephone</label>
+      <input
+        type="text"
+        class="form-control"
+        id="tel"
+        name="tel"
+        value=""
+        placeholder="Telephone"
+        required
+      />
+    </div>
+
+    <div class="col">
+      <label for="email">Email</label>
+      <input
+        type="text"
+        class="form-control"
+        id="email"
+        name="email"
+        value=""
+        placeholder="Email"
+        required
+      />
+    </div>
+  </div>
+
+  <div class="form-group mb-4">
+    <label for="details">Customer Details</label>
+    <textarea
+      class="form-control"
+      name="details"
+      id="details"
+      cols="30"
+      rows="12"
+      placeholder="Customer Details"
+    ></textarea>
+  </div>
+
+  <div class="form-group mb-4">
+    <button type="submit" class="btn btn-primary">Add Customer</button>
   </div>
 </form>
