--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,3 +8,15 @@
     </div>
   </div>
 </div>
+
+<% messages.forEach(element => { %>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <%= element %>
+  <button
+    type="button"
+    class="btn-close"
+    data-bs-dismiss="alert"
+    aria-label="Close"
+  ></button>
+</div>
+<% }) %>
