--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,3 +20,26 @@
   ></button>
 </div>
 <% }) %>
+
+<div class="table-responsive">
+  <table class="table table-striped table-sm">
+    <thead>
+      <tr>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col" class="text-end">Action</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <% customers.forEach(element => { %>
+      <tr class="align-middle">
+        <td><%= element.firstName %></td>
+        <td><%= element.lastName %></td>
+        <td><%= element.email %></td>
+        <td class="text-end"><% }) %></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
