action buttons added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,8 +38,37 @@
         <td><%= element.firstName %></td>
         <td><%= element.lastName %></td>
         <td><%= element.email %></td>
-        <td class="text-end"><% }) %></td>
+        <td class="text-end">
+          <div class="d-flex flex-row justify-content-end gap-2">
+            <a
+              href="/view/<%= element._id %>"
+              type="button"
+              class="btn btn-primary btn-small"
+            >
+              <i class="bi bi-eye"></i>
+            </a>
+
+            <a
+              href="/edit/<%= element._id %>"
+              type="button"
+              class="btn btn-warning btn-small"
+            >
+              <i class="bi bi-pencil"></i>
+            </a>
+
+            <form
+              action="/edit/<%= element._id %>?_method=DELETE"
+              method="POST"
+              class="position-relative"
+            >
+              <button type="submit" class="btn btn-danger btn-small">
+                <i class="bi bi-person-x"></i>
+              </button>
+            </form>
+          </div>
+        </td>
       </tr>
+      <% }) %>
     </tbody>
   </table>
 </div>
