customer detail list added

--- a/views/customer/view.ejs
+++ b/views/customer/view.ejs
@@ -31,3 +31,47 @@
     </div>
   </div>
 </div>
+
+<ul class="list-group">
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col" style="max-width: 140px"><b>Name:</b></div>
+      <div class="col"><%= customer.firstName %> <%= customer.lastName %></div>
+    </div>
+  </li>
+
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col" style="max-width: 140px"><b>Tel:</b></div>
+      <div class="col"><%= customer.tel %></div>
+    </div>
+  </li>
+
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col" style="max-width: 140px"><b>Email:</b></div>
+      <div class="col"><%= customer.email %></div>
+    </div>
+  </li>
+
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col" style="max-width: 140px"><b>Details:</b></div>
+      <div class="col"><%= customer.details %></div>
+    </div>
+  </li>
+
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col" style="max-width: 140px"><b>Date Created:</b></div>
+      <div class="col"><%= customer.createdAt %></div>
+    </div>
+  </li>
+
+  <li class="list-group-item">
+    <div class="row">
+      <div class="col" style="max-width: 140px"><b>Date Modified:</b></div>
+      <div class="col"><%= customer.updatedAt %></div>
+    </div>
+  </li>
+</ul>
