--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -10,3 +10,22 @@
     </div>
   </div>
 </div>
+
+<div class="col py-3">
+  <div class="row">
+    <div class="col">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="/">Dashboard</a></li>
+          <li class="breadcrumb-item active">
+            <%= customer.firstName %> <%= customer.lastName %>
+          </li>
+        </ol>
+      </nav>
+    </div>
+    <div class="col text-end fw-lighter">
+      <b>Last Updated: <%= new Date(customer.updatedAt).toUTCString() %></b>
+      <b>UserId:</b> <%= customer._id %>
+    </div>
+  </div>
+</div>
