--- a/views/customer/edit.ejs
+++ b/views/customer/edit.ejs
@@ -115,3 +115,44 @@
     </button>
   </div>
 </form>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="deleteModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title">
+          You are about to remove a customer record.
+        </div>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <p>
+          This will remove the customer record of
+          <b class="fw-bold"
+            ><%= customer.firstName %> <%= customer.lastName %></b
+          ><br />
+          Are you sure?
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <form
+          action="/edit/<%= customer._id %>?_method=DELETE"
+          method="POST"
+          class="position-relative"
+        >
+          <button type="submit" class="btn btn-primary">
+            Yes, Remove Customer
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
